data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_415.wast
;; 6. **Test Description**: A loop with a return type that doesn’t match within the block type, including an `unreachable` instruction in the event of incorrect type checking:    - **Constraint Checked**: Consistency of types in block types and correct result types.    - **Unreachable Code Execution**: Type mismatch might cause execution to reach `unreachable`.

(assert_invalid
  (module
    (func $mismatched-loop-type (result f32)
      (loop (result i32)
        (i32.const 0)
        (return)
      )
    )
  )
  "type mismatch"
)